syntax = "proto3";
package pb;

option go_package = "github.com/ashish19912009/zippyrail/account/pb";

message Account{
    string id = 1;
    string mobileNo = 2;
    string name = 3;
}
message PostAccountRequest {
    string mobileNo = 1; 
}

message PostAccountResponse {
    Account account = 1;
}

message UpdateAccountRequest {
    string mobileNo = 1;
    string name = 2;
}

message UpdateAccountResponse {
    Account account = 1;
}

message GetAccountRequest {
    string id = 1;
}

message GetAccountResponse {
    Account account = 1;
}

message GetAccountsRequest {
    uint64 skip = 1;
    uint64 take = 2;
}

message GetAccountsResponse {
    repeated Account accounts = 1;
}

service AccountService {
    rpc PostAccount  (PostAccountRequest)   returns (PostAccountResponse){

    }
    rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountResponse){

    }
    rpc GetAccount   (GetAccountRequest)    returns (GetAccountResponse){

    }
    rpc GetAccounts  (GetAccountsRequest)   returns (GetAccountsResponse){

    }
}